--- a/LoginPage.html
+++ b/LoginPage.html
@@ -3,6 +3,7 @@
 .boxed {
   border: 5px solid #3a7bd4 ;
   border-radius: 25px;
+  border-style: double;
   background: #Eaeeef;
   padding: 20px;
   height: 150px;
