--- a/index.html
+++ b/index.html
@@ -1,67 +1,13 @@
 <html>
 <head>
-<style>
-@font-face{
-  font-family: "pokefont";
-  src: url(pokefont.ttf);
-}
-label{
-font-family: "pokefont";
-}
-
-h1{
-font-family:"pokefont";
-}
-
-.loginresult{
-font-family: "pokefont"
-color: red;
-}
-
-button{
-font-family: "pokefont";
-}
-
-.submitbutton {
-font-family: "pokefont";
-font-size: 18px;
-color: #356ABC;
-background-color: #ffcd00;
-border-radius: 15px;
-border: 3px solid #356ABC;
-}
-
-.boxed {
-  border: 5px solid #356ABC ;
-  border-radius: 25px;
-  border-style: double;
-  background: #Eaeeef;
-  padding: 20px;
-  height: auto;
-  width: 600px;
-  margin: auto;
-  display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: left;
-  font-family:"pokefont";
-}
-
-div.boxed
-{
-    display: block;
-    text-align: center;
-    font-family:"pokefont";
-}
-
-
-body {
-background-image: url("https://wallpapercave.com/wp/wp2432933.jpg");
-background-repeat: no-repeat;
-background-size: cover;
-background-color: #cccccc;
-}
-</style>
+  <head>
+    <script type="text/javascript" src="js/code.js"></script>
+    <script type="text/javascript" src="js/md5.js"></script>
+      <link href="css/styles.css" rel="stylesheet">	
+    
+    <script type="text/javascript">
+    </script>
+  </head>
 </head>
 
   <body background= href="https://pixelz.cc/images/pokemon-poke-ball-wqhd-1440p-wallpaper/">
@@ -69,17 +15,19 @@ background-color: #cccccc;
     href="index.html"><img 
 src="https://fontmeme.com/permalink/210826/eb2ec528db4569fc99743c4afb9d8bc3.png" alt="pokemon-font" border="0"></a>
 <div class="boxed">
-  <h1 style="font-size:40px;font-family:"pokefont";">Sign in:</h1>
-  <form method="post">
-    <label for="Login" align="middle">Username:</label><br>
-    <input type="text" id="loginName" name="Login" required><br>
-    <label for="password" align="middle">Password:</label><br>
+  <h1 style="font-size:40px;font-family:'pokefont';">Sign in:</h1>
+  <div>
+    <label for="login">Username:</label><br>
+    <input type="text" id="loginName" name="login" required><br>
+    <label for="password">Password:</label><br>
     <input type="password" id="loginPassword" name="password" required>
     </br></br>
-    <button type="button" class="submitbutton" onclick="Login()">Login</button>
-  </form>
+    <button type="submit" class="submitbutton" onclick="doLogin()">Login</button>
+  </div>
+
+	
 	<p class="loginresult" id="loginResult"></p>
-	<h1 style="font-size:40px;font-family:"pokefont";">-or-</h1>
+	<h1 style="font-size:40px;font-family:'pokefont';">-or-</h1>
     	<button type="button" class="submitbutton" onclick="window.location.href='register.html'">Register(New Users)</button></br>
     	</br><button type="button" class="submitbutton" onclick="window.location.href='dex.html'">TEST!</button>
 </div>
