--- a/register.html
+++ b/register.html
@@ -12,19 +12,19 @@
     href="index.html"><img 
 src="https://fontmeme.com/permalink/210826/eb2ec528db4569fc99743c4afb9d8bc3.png" alt="pokemon-font" border="0"></a>
 <div class="boxed">
-    <h1 style="font-size:40px;font-family:'pokefont';">Register New Account:</h1>
+    <h1 id="boxBanner" style="font-size:40px;font-family:'pokefont';">Register New Account:</h1>
   <div id="registrationBox">
   <label for="firstName">First Name:</label><br>
   <input type="text" id="firstName" name="firstName" required><br>
   <label for="lastName">Last Name:</label><br>
   <input type="text" id="lastName" name="lastName" required><br>
   <label for="Login">Enter New Account Username:</label><br>
-  <input type="text" id="loginName" name="Login" required><br>
+  <input type="text" id="login" name="login" required><br>
   <label for="password">Enter New Account Password:</label><br>
-  <input type="password" id="loginPassword" name="password" required>
+  <input type="password" id="password" name="password" required>
   </br></br>
   <button type="submit" class="submitbutton" onclick="register();">Submit Registration</button>
-  <p id="registerError" style="color:red; font-size:40;"></p>
+  <p id="registerError" style="color:red; font-size:20;"></p>
 </div>
 </div>
   </body>
