--- a/dex.html
+++ b/dex.html
@@ -20,14 +20,14 @@
 			<h1 id="header" style="font-size:40px;font-family:'pokefont';">What would you like to do?</h1>
 			<h1 id="success" style="font-size:30px;font-family:'pokefont';"></h2>
 			<div id="createForm" style="display:none">
-				<label for='contactFirstName'>First Name:</label></br>
-					<input type='text' id='contactFirstName' name='fname' required></br>
-				<label for='contactLastName'>Last Name:</label></br>
-					<input type='text' id='contactLastName' name='lname' required></br>
-				<label for='contactEmail'>Email:</label></br>
-					<input type='email' id='contactEmail' name='email' required></br>
-				<label for='contactPhone'>Phone Number:</label></br>
-					<input type='tel' id='phoneNumber' name='phone' required></br></br>
+				<!label for='contactFirstName'>First Name:</label></br>
+					<!input type='text' id='contactFirstName' name='fname' required></br>
+				<!label for='contactLastName'>Last Name:</label></br>
+					<!input type='text' id='contactLastName' name='lname' required></br>
+				<!label for='contactEmail'>Email:</label></br>
+					<!input type='email' id='contactEmail' name='email' required></br>
+				<!label for='contactPhone'>Phone Number:</label></br>
+					<!input type='tel' id='phoneNumber' name='phone' required></br></br>
 				<button type="button" class="submitbutton" onclick="createContact();">Catch Person!</button>
 				<button type="button" class="submitbutton" onclick="cancelCreate();">Cancel</button>
 
