matched doLogin() to server response

--- a/dex.html
+++ b/dex.html
@@ -93,8 +93,8 @@
 						</form>
 
 						<div class="side-button-container">
-							<button type="button" class="button" id="addbutton" onclick="viewer.setCreate();">Add</button>
-							<button type="button" class="button" id="editbutton" onclick="editCreate();">Edit</button>
+							<button type="button" class="button" id="addbutton" onclick="beginCreateContact();">Add</button>
+							<button type="button" class="button" id="editbutton" onclick="editContact();">Edit</button>
 							<button type="button" class="button" id="deletebutton" onclick="deleteContact();">Del</button>
 						</div>
 						
