--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
 <html>
 <head>
-    <script type="text/javascript" src="js/code.js"></script>
-    <script type="text/javascript" src="js/md5.js"></script>
-      <link href="css/styles.css" rel="stylesheet">	
-    
-    <script type="text/javascript">
-    </script>
+	<script type="text/javascript" src="js/code.js"></script>
+	<script type="text/javascript" src="js/md5.js"></script>
+	<link href="css/styles.css" rel="stylesheet">	
 </head>
-
-  <body background= href="https://pixelz.cc/images/pokemon-poke-ball-wqhd-1440p-wallpaper/">
-    <p align="center"><a 
-    href="index.html"><img 
-src="https://fontmeme.com/permalink/210826/eb2ec528db4569fc99743c4afb9d8bc3.png" alt="pokemon-font" border="0"></a>
-<div class="boxed">
-  <h1 style="font-size:40px;font-family:'pokefont';">Sign in:</h1>
-  <div>
-    <label for="login">Username:</label><br>
-    <input type="text" id="loginName" name="login" required><br>
-    <label for="password">Password:</label><br>
-    <input type="password" id="loginPassword" name="password" required>
-    </br></br>
-    <button type="submit" class="submitbutton" onclick="doLogin()">Login</button>
-  </div>
-
-	
-	<p class="loginresult" id="loginResult"></p>
-	<h1 style="font-size:40px;font-family:'pokefont';">-or-</h1>
-    	<button type="button" class="submitbutton" onclick="window.location.href='register.html'">Register(New Users)</button></br>
-    	</br><button type="button" class="submitbutton" onclick="window.location.href='dex.html'">TEST!</button>
-</div>
-  </body>
+<body background= href="https://pixelz.cc/images/pokemon-poke-ball-wqhd-1440p-wallpaper/">
+	<p align="center"><a href="index.html"><img 
+	src="https://fontmeme.com/permalink/210826/eb2ec528db4569fc99743c4afb9d8bc3.png" alt="pokemon-font" border="0"></a></p>
+	<div class="boxed">
+		<h1 style="font-size:40px;font-family:'pokefont';">Sign in:</h1>
+	<div>
+	<label for="login">Username:</label><br>
+	<input type="text" id="loginName" name="login" required><br>
+	<label for="password">Password:</label><br>
+	<input type="password" id="loginPassword" name="password" required>
+	</br></br>
+	<button type="submit" class="submitbutton" onclick="doLogin()">Login</button>
+	</div>
+		<p class="loginresult" id="loginResult"></p>
+		<h1 style="font-size:40px;font-family:'pokefont';">-or-</h1>
+		<button type="button" class="submitbutton" onclick="window.location.href='register.html'">Register(New Users)</button></br>
+		</br><button type="button" class="submitbutton" onclick="window.location.href='dex.html'">TEST!</button>
+	</div>
+</body>
 </html>
