AddContact and searchContact are functional

--- a/dex.html
+++ b/dex.html
@@ -18,6 +18,7 @@
 		<div class="boxed" id="whatBox">
 		
 			<h1 id="header" style="font-size:40px;font-family:'pokefont';">What would you like to do?</h1>
+			<h1 id="userName" style="font-size:20px;font-family:'pokefont';"></h1>
 			<h1 id="success" style="font-size:30px;font-family:'pokefont';"></h2>
 			<div id="createForm" style="display:none">
 				<!label for='contactFirstName'>First Name:</label></br>
@@ -116,6 +117,7 @@
 						</div>
 					</div>
 					<p id="createError" style="color:red; font-size:25px;"></p>
+					<!-- <p id="success" style="color:greenyellow; font-size:25px;"></p> -->
 				</div>
 			</div>
 
