--- a/dex.html
+++ b/dex.html
@@ -6,10 +6,10 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	
 	<script type="text/javascript">
-//	document.addEventListener('DOMContentLoaded', function() 
-//	{
-//		readCookie();
-//	}, false);
+	document.addEventListener('DOMContentLoaded', function() 
+	{
+		readCookie();
+	}, false);
 	</script>
 </head>
 <body>
@@ -21,13 +21,13 @@
 			<h1 id="userName" style="font-size:20px;font-family:'pokefont';"></h1>
 			<h1 id="success" style="font-size:30px;font-family:'pokefont';"></h2>
 			<div id="createForm" style="display:none">
-				<!label for='contactFirstName'>First Name:</label></br>
+				<label for='contactFirstName'>First Name:</label></br>
 					<!input type='text' id='contactFirstName' name='fname' required></br>
-				<!label for='contactLastName'>Last Name:</label></br>
+				<label for='contactLastName'>Last Name:</label></br>
 					<!input type='text' id='contactLastName' name='lname' required></br>
-				<!label for='contactEmail'>Email:</label></br>
+				<label for='contactEmail'>Email:</label></br>
 					<!input type='email' id='contactEmail' name='email' required></br>
-				<!label for='contactPhone'>Phone Number:</label></br>
+				<label for='contactPhone'>Phone Number:</label></br>
 					<!input type='tel' id='phoneNumber' name='phone' required></br></br>
 				<button type="button" class="submitbutton" onclick="createContact();">Catch Person!</button>
 				<button type="button" class="submitbutton" onclick="cancelCreate();">Cancel</button>
@@ -123,12 +123,7 @@
 
 			<div class="boxed" id="contactSearchResults" style="text-align: left;">
 				<p id="searchResultBanner" style="font-size:40px;"></p>
-				<ul id="resultsList">
-					<li class="unselected" id="1" onclick="select(this.id);">Fake Contact</li>
-					<li class="unselected" id="2" onclick="select(this.id);">Fake Contact</li>
-					<li class="unselected" id="3" onclick="select(this.id);">Fake Contact</li>
-					<li class="unselected" id="4" onclick="select(this.id);">Fake Contact</li>
-					<li class="unselected" id="5" onclick="select(this.id);">Fake Contact</li>
+				<ul id="resultsList" style="overflow:auto;">
 				</ul>
 			</div>
 		</div>
