--- a/dex.html
+++ b/dex.html
@@ -14,14 +14,14 @@
             height: 2%;
             border-right: 2px solid white;
             background-color:#393e46;
-            padding-bottom: .15%;
             padding-top: .25%;
+			color: #f7f7e7; 
             font-family: "pokefont";
 			cursor: pointer;
         }
 
 		.nav:hover{
-			background-color:#474c53;
+			background-color:#474c53
 		}
 
         .logout{
@@ -32,9 +32,6 @@
             font-family: "pokefont";
 			cursor: pointer;
 			background-color:#393e46;
-			padding-bottom: .15%;
-            padding-top: .25%;
-			margin-bottom: 20%;
 			font-size:20px;
 			color: #f7f7e7;
         }
@@ -46,15 +43,17 @@
             position: fixed; 
             top: 0; 
             width: 100%; 
-            background-color:#474c53; 
+            background-color:#393e46;
             display:inline-block; 
             height:2.3%; 
             padding-bottom: .2%; 
             padding-top: .2%; 
             margin-bottom: 2%; 
             z-index: 10;
+			color: #f7f7e7; 
             font-family: "pokefont";
 			cursor: pointer;
+			border-bottom: 2px solid white;
         }
     </style>
     <! end new code>
@@ -67,8 +66,8 @@
 	</script>
 </head>
 <body>
-    <! new code>
-	<nav class=menu style= "position: fixed; display:inline-block; top: 0; width: 100%;  margin-bottom: 2%;  padding-bottom: .5%; padding-top: .25%; height: 2%; background-color:#393e46; font-family: 'pokefont'; font-weight: bold;"> Search By Letter:
+    <! new code padding-bottom: .5%;>
+	<nav class=menu style= "border-bottom: 2px solid white; position: fixed; display:inline-block; top: 0; width: 100%; color: #f7f7e7; padding-bottom: .3%;  margin-bottom: 2%; padding-top: .25%; height: 2%; background-color:#393e46; font-family: 'pokefont'; font-weight: bold;"> Search By Letter:
 	<ul class="ulnav">
 		<li class="nav" onclick="searchLtr('a')">A</li>
 		<li class="nav" onclick="searchLtr('b')">B</li>
@@ -169,7 +168,8 @@
 							<div class="light red"></div>
 							<div class="light red"></div>
 						</div>
-						<form action="" class="results" spellcheck="false">
+						<p id="success" style="animation: type 2s steps(60, end); font-family: 'pokefont'; font-size: 20px;"></p>
+						<form action="" id="resultsScreen" class="results" spellcheck="false">
 							<label for='contactFirstName'>First Name:</label>
 							<input type='text' id='contactFirstName' name='fname' required readonly>
 							
