--- a/dex.html
+++ b/dex.html
@@ -168,7 +168,7 @@
 							<div class="light red"></div>
 							<div class="light red"></div>
 						</div>
-						<p id="success" style="animation: type 2s steps(60, end); font-family: 'pokefont'; font-size: 20px;"></p>
+						<p id="success" style="animation: type 2s steps(60, end); font-family: 'pokefont'; font-size: 20px; display: none;"></p>
 						<form action="" id="resultsScreen" class="results" spellcheck="false">
 							<label for='contactFirstName'>First Name:</label>
 							<input type='text' id='contactFirstName' name='fname' required readonly>
