--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 
   <body background= href="https://pixelz.cc/images/pokemon-poke-ball-wqhd-1440p-wallpaper/">
-    <p align="center"><a 
-    href="index.html"><img 
-src="https://fontmeme.com/permalink/210826/eb2ec528db4569fc99743c4afb9d8bc3.png" alt="pokemon-font" border="0"></a>
+    <p align="center"><a id="logo" href="index.html"><img src="https://fontmeme.com/permalink/210826/eb2ec528db4569fc99743c4afb9d8bc3.png" alt="pokemon-font" border="0"></a>
 <div class="boxed">
   <h1 style="font-size:40px;font-family:'pokefont';">Sign in:</h1>
   <div>
